--- a/pre_processing/convert_to_automl.ipynb
+++ b/pre_processing/convert_to_automl.ipynb
@@ -96,15 +96,15 @@
    },
    "outputs": [],
    "source": [
-    "pathRes = 'Data/'\n",
-    "fileName = 'bees.csv'\n",
+    "pathRes = '../../DATA/Train_Small/Images/'\n",
+    "fileName = 'train_small_pixels.csv'\n",
     "\n",
     "path = pathRes + fileName\n",
-    "pathAuto = pathRes+'AutoML/'\n",
+    "pathAuto = pathRes+'AutoML_TEST/'\n",
     "pathPublic = pathAuto+'public_data/'\n",
     "pathSample = pathAuto+'sample_data/'\n",
-    "dataName = 'bee'\n",
-    "chalName = 'beeVSwasp'\n",
+    "dataName = 'deep_pollination'\n",
+    "chalName = 'deep_pollination'\n",
     "taskName = 'multiclass.classification'\n",
     "targetType = 'Numerical'\n",
     "featType = 'Numerical'\n",
@@ -148,6 +148,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 49153)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "IBuhb2f730sB"
@@ -158,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "PxDQKDDMtdav"
    },
@@ -188,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "rerJE4BVtdaw",
     "outputId": "db65ea0a-479f-4617-e19b-1383b756293d"
@@ -198,10 +218,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deletion of the directory Data/AutoML/public_data/ failed\n",
-      "Successfully created the directory Data/AutoML/\n",
-      "Successfully created the directory Data/AutoML/public_data/\n",
-      "Successfully created the directory Data/AutoML/sample_data/\n"
+      "Deletion of the directory ../../DATA/Train_Small/Images/AutoML_TEST/public_data/ failed\n",
+      "Successfully created the directory ../../DATA/Train_Small/Images/AutoML_TEST/\n",
+      "Successfully created the directory ../../DATA/Train_Small/Images/AutoML_TEST/public_data/\n",
+      "Successfully created the directory ../../DATA/Train_Small/Images/AutoML_TEST/sample_data/\n"
      ]
     }
    ],
@@ -246,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "_urkY3jXtdaw",
     "outputId": "7e644038-eb68-40b4-9b96-d4d3ed94d615"
@@ -256,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_feat.name is created\n"
+      "deep_pollination_feat.name is created\n"
      ]
     }
    ],
@@ -283,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "5FheX-bwtdax",
     "outputId": "01535dea-0e8a-4945-f366-969933b0b710"
@@ -306,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "id": "o9_ypn8ntdaz",
     "outputId": "ef3e43bd-ce8e-4830-fbd5-6f4716c79517"
@@ -316,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_label.name is created\n"
+      "deep_pollination_label.name is created\n"
      ]
     }
    ],
@@ -343,23 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "ZBtJ6DxKtdaz"
    },
    "outputs": [],
    "source": [
-    "x_temp, x_test, y_temp, y_test = train_test_split(\n",
-    "    X, enc_y, test_size=percTest)\n",
+    "# x_temp, x_test, y_temp, y_test = train_test_split(\n",
+    "#     X, enc_y, test_size=percTest)\n",
     "\n",
     "\n",
-    "testSize = int(percTest*X.shape[0])/x_temp.shape[0] \n",
+    "# testSize = int(percTest*X.shape[0])/x_temp.shape[0] \n",
     "\n",
-    "if(testSize == 0):\n",
-    "    testSize = 1\n",
+    "# if(testSize == 0):\n",
+    "#     testSize = 1\n",
     "    \n",
-    "x_train, x_valid, y_train, y_valid = train_test_split(\n",
-    "    x_temp, y_temp, test_size= testSize)"
+    "# x_train, x_valid, y_train, y_valid = train_test_split(\n",
+    "#     x_temp, y_temp, test_size= testSize)"
    ]
   },
   {
@@ -373,34 +393,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "id": "np0vn-w4tdaz",
     "outputId": "faba4c96-eeef-41dd-89b2-2ac25fd702a6"
    },
+   "outputs": [],
+   "source": [
+    "# x_train.to_csv(pathPublic+dataName+\"_train.data\", header=None, index=None, sep=' ', mode='a')\n",
+    "# np.savetxt(pathPublic+dataName+\"_train.solution\", y_train, fmt='%d')\n",
+    "# print(dataName+\"_train.data and \"+dataName+\"_train.solution are created\")\n",
+    "\n",
+    "# x_valid.to_csv(pathPublic+dataName+\"_valid.data\", header=None, index=None, sep=' ', mode='a')\n",
+    "# np.savetxt(pathPublic+dataName+\"_valid.solution\", y_valid, fmt='%d')\n",
+    "# print(dataName+\"_valid.data and \"+dataName+\"_valid.solution are created\")\n",
+    "\n",
+    "# x_test.to_csv(pathPublic+dataName+\"_test.data\", header=None, index=None, sep=' ', mode='a')\n",
+    "# np.savetxt(pathPublic+dataName+\"_test.solution\", y_test, fmt='%d')\n",
+    "# print(dataName+\"_test.data and \"+dataName+\"_test.solution are created\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_train.data and bee_train.solution are created\n",
-      "bee_valid.data and bee_valid.solution are created\n",
-      "bee_test.data and bee_test.solution are created\n"
+      "deep_pollination_train.data and deep_pollination_train.solution are created\n"
      ]
     }
    ],
    "source": [
-    "x_train.to_csv(pathPublic+dataName+\"_train.data\", header=None, index=None, sep=' ', mode='a')\n",
-    "np.savetxt(pathPublic+dataName+\"_train.solution\", y_train, fmt='%d')\n",
+    "X.to_csv(pathPublic+dataName+\"_train.data\", header=None, index=None, sep=' ', mode='a')\n",
+    "np.savetxt(pathPublic+dataName+\"_train.solution\", enc_y, fmt='%d')\n",
     "print(dataName+\"_train.data and \"+dataName+\"_train.solution are created\")\n",
     "\n",
-    "x_valid.to_csv(pathPublic+dataName+\"_valid.data\", header=None, index=None, sep=' ', mode='a')\n",
-    "np.savetxt(pathPublic+dataName+\"_valid.solution\", y_valid, fmt='%d')\n",
-    "print(dataName+\"_valid.data and \"+dataName+\"_valid.solution are created\")\n",
+    "# X.to_csv(pathPublic+dataName+\"_valid.data\", header=None, index=None, sep=' ', mode='a')\n",
+    "# np.savetxt(pathPublic+dataName+\"_valid.solution\", enc_y, fmt='%d')\n",
+    "# print(dataName+\"_valid.data and \"+dataName+\"_valid.solution are created\")\n",
     "\n",
-    "x_test.to_csv(pathPublic+dataName+\"_test.data\", header=None, index=None, sep=' ', mode='a')\n",
-    "np.savetxt(pathPublic+dataName+\"_test.solution\", y_test, fmt='%d')\n",
-    "print(dataName+\"_test.data and \"+dataName+\"_test.solution are created\")"
+    "# X.to_csv(pathPublic+dataName+\"_test.data\", header=None, index=None, sep=' ', mode='a')\n",
+    "# np.savetxt(pathPublic+dataName+\"_test.solution\", enc_y, fmt='%d')\n",
+    "# print(dataName+\"_test.data and \"+dataName+\"_test.solution are created\")"
    ]
   },
   {
@@ -414,21 +451,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "id": "QQ1iT0sJtda0"
    },
+   "outputs": [],
+   "source": [
+    "# typee = x_train.dtypes\n",
+    "# typee.to_csv(pathPublic+dataName+\"_feat.type\", header=None, index=None, sep=' ', mode='a')\n",
+    "# print(dataName+\"_feat.type is created\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_feat.type is created\n"
+      "deep_pollination_feat.type is created\n"
      ]
     }
    ],
    "source": [
-    "typee = x_train.dtypes\n",
+    "typee = X.dtypes\n",
     "typee.to_csv(pathPublic+dataName+\"_feat.type\", header=None, index=None, sep=' ', mode='a')\n",
     "print(dataName+\"_feat.type is created\")"
    ]
@@ -444,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "id": "ACc2ucGYtda0",
     "outputId": "c6b7f922-0432-4361-c6ef-af7390762904"
@@ -454,7 +502,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_public.info is created\n"
+      "deep_pollination_public.info is created\n"
      ]
     }
    ],
@@ -469,9 +517,9 @@
     "f.write('feat_num = '+str(len(features))+'\\n')\n",
     "f.write('target_num = '+str(len(labels))+'\\n')\n",
     "f.write('label_num = '+str(len(labels))+'\\n')\n",
-    "f.write('train_num = '+str(len(x_train))+'\\n')\n",
-    "f.write('valid_num = '+str(len(x_valid))+'\\n')\n",
-    "f.write('test_num = '+str(len(x_test))+'\\n')\n",
+    "f.write('train_num = '+str(10000)+'\\n')\n",
+    "f.write('valid_num = '+str(3000)+'\\n')\n",
+    "f.write('test_num = '+str(12500)+'\\n')\n",
     "f.write('has_categorical = '+hasCategorical+'\\n')\n",
     "f.write('has_missing = '+hasMissing+'\\n')\n",
     "f.write('is_sparse = '+isSparse+'\\n')\n",
@@ -491,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "id": "_ANk9f4_tda0",
     "outputId": "ecb87fec-41b4-4487-f662-8e037ae25815"
@@ -501,7 +549,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_private.info is created\n"
+      "deep_pollination_private.info is created\n"
      ]
     }
    ],
@@ -596,9 +644,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_train.data and bee_train.solution are created\n",
-      "bee_valid.data and bee_valid.solution are created\n",
-      "bee_test.data and bee_test.solution are created\n"
+      "deep_pollination_train.data and deep_pollination_train.solution are created\n",
+      "deep_pollination_valid.data and deep_pollination_valid.solution are created\n",
+      "deep_pollination_test.data and deep_pollination_test.solution are created\n"
      ]
     }
    ],
@@ -628,7 +676,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bee_public.info is created\n"
+      "deep_pollination_public.info is created\n"
      ]
     }
    ],
@@ -665,7 +713,7 @@
     {
      "data": {
       "text/plain": [
-       "'Data/AutoML/sample_data/bee_feat.type'"
+       "'../starting_kit2/sample_data/AutoML/sample_data/deep_pollination_feat.type'"
       ]
      },
      "execution_count": 20,
@@ -679,6 +727,13 @@
     "shutil.copyfile(pathPublic+dataName+\"_feat.name\", pathSample+dataName+\"_feat.name\")\n",
     "shutil.copyfile(pathPublic+dataName+\"_feat.type\", pathSample+dataName+\"_feat.type\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
